src/sass/Detail.scss
$detail-image-height: 420px;

.detail {
  width: 100%;
  box-sizing: border-box;
  padding: 64px 15px 30px;
  max-width: 559px;
  margin: 0 auto;
  .headervg {
    margin: 0 -15px;
  }
  .detail-form {
    .btn-ride {
      width: 210px;
      height: 36px;
    }
  }
}

@media screen and (min-width: $tablet-min) {
  .detail {
    .headervg {
      margin: 0;
      .card {
        width: 100%;
      }
    }
  }
}

@media screen and (min-width: 559px) {
  .detail {
    .headervg {
      .card {
        width: 529px;
      }
    }
  }
}

@media screen and (min-width: $desktop-min) {
  .detail {
    position: relative;
    max-width: 1069px;
    min-height: 600px;
    padding: 112px 30px 60px;
    box-sizing: border-box;
    & > div {
      width: calc(100% - 344px);
    }
    // header with photo
    .headervg {
      .headervg-desktop {
        .image {
          width: 100%;
          height: $detail-image-height;
          background-size: contain;
          background-position: center center;
          background-repeat: no-repeat;
        }
        .title {
          font-size: 34px;
          font-weight: $medium;
          letter-spacing: 2.43px;
          padding: 30px 0 0 0;
        }
        .owner {
          display: flex;
          align-items: center;
          padding: 30px 0 0 0;
          .picture {
            display: inline-block;
            width: 55px;
            height: 55px;
            background-size: cover;
          }
          .owner-details {
            font-size: 16px;
            font-weight: $regular;
            letter-spacing: 1px;
            display: inline-block;
            padding: 10px;
            vertical-align: top;
          }
        }
        .text {
          font-size: 16px;
          font-weight: $regular;
          letter-spacing: 1px;
          padding: 30px 0;
          line-height: 30px;
        }
      }
    }

    // form for booking (right column)
    .detail-form {
      position: absolute;
      top: 0;
      right: 30px;
      bottom: 0;
      width: 314px;
      margin: 112px 0 0 0;
      #detail-side {
        padding: 54px 0 0 0;
        transform: translate3d(0,0,0) !important;
        width: 314px;
        .title {
          font-size: 28px;
          font-weight: $medium;
          letter-spacing: 2px;
          width: 100%;
          text-transform: uppercase;
          margin-bottom: 39px;
        }
      }
      .fixed {
        margin-top: -54px;
        position: fixed;
      }
      .absolute {
        position: absolute;
        bottom: 60px;
      }
    }
  }
}

// .comments {
//   padding: 60px 0 30px;
//   .comments-cont {
//     padding: 22px 30px;
//     .references {
//       @extend .t3;
//     }
//     .ratings {
//       margin-top: 45px;
//     }
//     .row {
//       display: flex;
//       margin-bottom: 17px;
//       .rate {
//         display: flex;
//         flex: 1;
//         justify-content: space-between;
//         align-items: center;
//         padding-right: 25px;
//         .type {
//           @extend .t5;
//           padding-right: 20px;
//         }
//         .stars {
//           .material-icons {
//             font-size: 18px !important;
//             padding: 2px;
//           }
//         }
//       }
//     }
//     .comment {
//       margin-top: 57px;
//       .author {
//         @extend .t5;
//         display: flex;
//         .picture {
//           width: 35px;
//           height: 35px;
//           background-image: url('https://scontent-waw1-1.cdninstagram.com/t51.2885-15/e35/15877344_344661349253204_5404343355553349632_n.jpg');
//           background-size: cover;
//           background-position: center center;
//         }
//         .fullname {
//           padding: 9px 0px 0 19px;
//         }
//         .location {
//           padding: 9px 0px 0 19px;
//         }
//       }
//       .text {
//         @extend .t5;
//         font-style: italic;
//         padding: 14px 0;
//         line-height: 30px;
//       }
//     }
//   }
//   .view-all {
//     @extend .t6;
//     border-top: 1px solid black;
//     margin-top: 8px;
//     height: 54px;
//     text-decoration: underline;
//     text-align: center;
//     padding-top: 21px;
//     cursor: pointer;
//     box-sizing: border-box;
//   }
// }

